Remove need for javafx-fxml, remove ci/cd, add windows keys handling, others